deployment/puppet/openstack/files/iptables
# Generated by iptables-save v1.4.7 on Mon Oct 29 18:19:01 2012
*nat
:PREROUTING ACCEPT [12:720]
:POSTROUTING ACCEPT [335:20096]
:OUTPUT ACCEPT [335:20096]
COMMIT
# Completed on Mon Oct 29 18:19:01 2012
# Generated by iptables-save v1.4.7 on Mon Oct 29 18:19:01 2012
*filter
:INPUT ACCEPT [15:480]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [22818:4432798]
-A INPUT -p icmp -m comment --comment "000 accept all icmp" -j ACCEPT 
-A INPUT -i lo -m comment --comment "001 accept all to lo interface" -j ACCEPT 
-A INPUT -m comment --comment "002 accept related established rules" -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -d 224.0.0.18/32 -p tcp -m pkttype --pkt-type multicast -m comment --comment "003 keepalived multicast" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 11211 -m comment --comment "100 snat for port 11211" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 22 -m comment --comment "100 snat for port 22" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 3260 -m comment --comment "100 snat for port 3260" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 3306 -m comment --comment "100 snat for port 3306" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 3307 -m comment --comment "100 snat for port 3307" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 35357 -m comment --comment "100 snat for port 35357" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 41055 -m comment --comment "100 snat for port 41055" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 4369 -m comment --comment "100 snat for port 4369" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 443 -m comment --comment "100 snat for port 443" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 4567 -m comment --comment "100 snat for port 4567" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 4568 -m comment --comment "100 snat for port 4568" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 5000 -m comment --comment "100 snat for port 5000" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 5672 -m comment --comment "100 snat for port 5672" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 6000 -m comment --comment "100 snat for port 6000" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 6001 -m comment --comment "100 snat for port 6001" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 6002 -m comment --comment "100 snat for port 6002" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 6080 -m comment --comment "100 snat for port 6080" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "100 snat for port 80" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 8080 -m comment --comment "100 snat for port 8080" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 873 -m comment --comment "100 snat for port 873" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 8773 -m comment --comment "100 snat for port 8773" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 8774 -m comment --comment "100 snat for port 8774" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 8775 -m comment --comment "100 snat for port 8775" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 8776 -m comment --comment "100 snat for port 8776" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 9191 -m comment --comment "100 snat for port 9191" -j ACCEPT 
-A INPUT -p tcp -m multiport --dports 9292 -m comment --comment "100 snat for port 9292" -j ACCEPT 
COMMIT
# Completed on Mon Oct 29 18:19:01 2012
